# RANGEN-V2

./: .cursorrules  .cursorrules.backup  .cursorrules.optimized  .env.bak  .env.example  .env.gateway.example  .gitignore  .pylintrc  .rangen_pids  =1.20.0  AGENTS.md  AGENTS_ARCHITECTURE_COMPARISON.md  AGENTS_CAPABILITY_ANALYSIS.md  AGENTS_PRACTICAL_OPTIMIZATION.md  API_CONFIG_README.md  ARCHITECTURE_IMPROVEMENTS_SUMMARY.md  CONTRIBUTING.md  CURRENT_SYSTEM_AGENTS_ANALYSIS.md  DATA_DISCOVERY_IMPLEMENTATION_GUIDE.md  DATA_DISCOVERY_RANGEN_INTEGRATION_GUIDE.md  DATA_GOVERNANCE_CAPABILITY_ANALYSIS.md  DETAILED_TECHNICAL_REVIEW_FRAMEWORK.md  DOCUMENTATION_STRUCTURE.md  Dockerfile  FRAMES_DATASET_BUILD_GUIDE.md  FRAMES_DATASET_QUALITY_REPORT.md  HETEROGENEOUS_DATA_DISCOVERY_AND_STANDARDIZATION_DESIGN.md  HETEROGENEOUS_DATA_DISCOVERY_TECHNICAL_SPECIFICATION.md  IMPLEMENTATION_ROADMAP_3_6_MONTHS.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  RAGEXPERT_LOCAL_KERAS_SUCCESS.md  RAG_OPTIMIZATION_GUIDE.md  RANGEN-main(syu-python).code-workspace  RANGEN_RULES.md  RANGEN_V2_ANALYSIS_REPORT.md  RANGEN_V3_SYSTEM_ANALYSIS.md  RANGEN_V3_SYSTEM_ANALYSIS_REPORT.md  README.md  README_CURSOR_NODE_DOCSTRING.md  (+491 more)
.github/: markdown-link-check.json
.sisyphus/: boulder.json
analysis/: __init__.py
backup_legacy_agents/: __init__.py  answer_generation_agent_wrapper.py  base_agent.py  chief_agent_wrapper.py  citation_agent_wrapper.py  context_engineering_agent.py  context_engineering_agent_wrapper.py  enhanced_analysis_agent.py  enhanced_analysis_agent_wrapper.py  expert_agents.py  fact_verification_agent.py  fact_verification_agent_wrapper.py  intelligent_coordinator_agent.py  intelligent_coordinator_agent_wrapper.py  intelligent_strategy_agent.py  intelligent_strategy_agent_wrapper.py  knowledge_retrieval_agent_wrapper.py  langgraph_react_agent.py  learning_system.py  learning_system_wrapper.py  memory_agent_wrapper.py  optimized_knowledge_retrieval_agent.py  optimized_knowledge_retrieval_agent_wrapper.py  prompt_engineering_agent.py  prompt_engineering_agent_wrapper.py  rag_agent_wrapper.py  react_agent.py  react_agent_wrapper.py  strategic_chief_agent.py  strategic_chief_agent_wrapper.py
comprehensive_eval_results/: _is_likely_question_purpose_analysis_20251129.md  accuracy_analysis_20251119.md  accuracy_analysis_report.md  accuracy_and_ai_score_analysis.md  accuracy_and_confidence_calculation_analysis_20251123.md  accuracy_calculation_fix_20251129.md  accuracy_comparison_jina_vs_local.md  accuracy_drop_analysis_local_vs_jina.md  accuracy_drop_from_100_to_80_root_cause_20251126.md  accuracy_drop_root_cause.md  accuracy_drop_root_cause_analysis_20251128.md  accuracy_drop_root_cause_comprehensive_analysis_20251128.md  accuracy_improvement_analysis.md  accuracy_issue_root_cause_analysis.md  accuracy_low_core_reason_analysis_20251126.md  accuracy_low_reason_analysis.md  accuracy_root_cause_analysis.md  advanced_issues_report.md  agent_architecture_analysis.md  agent_definition_compliance_analysis_20251130.md  agent_definition_compliance_summary_20251130.md  agent_implementation_verification_report.md  agent_rag_relationship_analysis_20251127.md  agents_migration_analysis.md  ai_algorithm_functionality_analysis.md  ai_algorithm_score_refactoring.md  aigc_capability_gap_analysis.md  all_optimizations_implementation_summary.md  all_stages_optimization_completed.md  answer_consistency_optimization_20251129.md  answer_error_analysis_20251130.md  answer_error_investigation_report.md  answer_error_root_cause_analysis.md  answer_extraction_fix_analysis.md  answer_extraction_refactoring.md  answer_extraction_simplification_fix.md  answer_format_optimization_implementation_20251122.md  answer_length_limit_analysis_20251122.md  answer_length_optimization_implementation_20251122.md  answer_length_optimization_summary_20251122.md  (+662 more)
config/: README.md  anti_cheat_config.yaml  base.yaml  confidence_config.json  defaults.py  documentation_sync_config.yaml  documentation_sync_examples.yaml  english_vectorizer_config.json  evaluation_config.sh  evaluation_modes.json  evaluation_optimization.json  frames_evaluation_config.yaml  kms_regression_samples.json  lightweight_evaluation_config.json  mcp_config.yaml  ml_training_config.example.json  ml_training_config.json  ml_training_config.jsonc  model_config.json  model_config.py  optimized_settings.py  pattern_matching.json  production_config.yaml  production_settings.json  rangen_v2.yaml  retrieval_performance_optimization.json  rules.yaml  settings.py  standards.json  system_config.json  versions.json
config_merge_backup_20250908_193844/: batch_processing_optimization.json  default_domains.json  fast_evaluation_config.json  frames_evaluation_config.json  frames_wikilink_config.json  performance_optimization.json  zero_hardcode_config.json
constitution/: BIBLE.md  identity.md
debug_logs/: step1_llm_prompt.txt  step1_llm_response.txt  step2_llm_prompt.txt  step2_llm_response.txt  step3_llm_prompt.txt  step3_llm_response.txt  step4_llm_prompt.txt  step4_llm_response.txt  step5_llm_prompt.txt  step5_llm_response.txt  step6_llm_prompt.txt  step6_llm_response.txt  step7_llm_prompt.txt  step7_llm_response.txt
diagnostics/: API_KEY_VALIDATION_REPORT.md  api_key_validation_test.py  contrast_test_matrix.py  env_workaround.py  failure_knowledge_base.py  rag_expert_diagnosis.py  rag_failure_analysis.py  rag_success_rate_analysis.py  setup_api_key_guide.md  test_with_env_vars.sh
docs/: API_AUTHENTICATION.md  CORE_SYSTEM_STRUCTURE.md  INTEGRATION_PLAN.md  P3_PHI3_INTEGRATION_PLAN.md  README.md  agent_redundancy_analysis.md  agent_trends_2025_analysis.md  ai_platform_proposal.md  automatic_notification_guide.md  base_standards.md  documentation-quality-report.md  documentation_sync_system_guide.md  documentation_sync_system_summary.md  entity_standards.md  gradual_replacement_guide.md  how_to_check_execution_diagnosis.md  how_to_check_replacement_rate.md  how_to_increase_replacement_rate.md  improvement_actions_summary.md  integration_readme.md  langgraph_archive_plan.md  (+19 more)
(+2342 files in other folders)
